# rj-debug

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md
resource/java/: empty.java
resource/json/: empty.json
resource/testcase/dump_bytecode/: Dump.java  config.json
resource/testcase/print_to_string/: MainObject.java  breakpoints.json  config.json  result.txt
resource/testcase/set_break_point/: breakpoints.json  config.json  empty.java
src/: bridge.h  config.rs  debug.c  lib.rs  load.rs  logger.rs  messages.rs  method.rs  runtime.rs  tools.c  tools.h  writer.rs
src/native/: jni.rs  jni_md.rs  jvmti.rs  mod.rs
src/wrapper/: capabilities.rs
tests/: config_test.rs  log_test.rs
